--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 <body>
     <!-- header start -->
     <header>
-        
+        <nav>
+            <h3>Influencer products</h3>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">Sign up</a></li>
+                <li><a href="">Log in</a></li>
+                <li><a href=""><img src="logos/akar-icons_search.svg" alt=""></a></li>
+                <li><a href=""><img src="logos/clarity_shopping-cart-outline-badged.svg" alt=""></a></li>
+            </ul>
+        </nav>
     </header>
     <!-- hearder end -->
     <main>
